@@ -6,7 +6,8 @@ Proj 4.9+ required.
 
 * Bug Fixes  *
 
-
+ - #5998, [tiger_geododer] Do not create tiger_data as part
+             of postgis_tiger_geocoder extension, create/update (Regina Obe)
 
 PostGIS 3.2.9
 2026/02/08
